--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "sakila",
+  "name": "back-end",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app"
+    "start": "nodemon index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ajv": "^7.2.3",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-async-error": "0.0.2",
-    "express-async-errors": "^3.1.1",
-    "knex": "^0.95.2",
-    "morgan": "^1.10.0",
-    "mysql2": "^2.2.5"
+    "express": "4.17.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/node": "^15.0.0",
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
   }
 }
