--- a/back-end/package.json
+++ b/back-end/package.json
@@ -11,9 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "4.17.1"
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.0.0",
+    "express": "4.17.1",
+    "save": "^2.4.0",
+    "secp256k1": "^4.0.2"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.0.1",
     "@types/express": "^4.17.11",
     "@types/node": "^15.0.0",
     "nodemon": "^2.0.7",
