--- a/back-end/package.json
+++ b/back-end/package.json
@@ -11,15 +11,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "crypto-js": "^4.0.0",
     "express": "4.17.1",
+    "express-async-errors": "^3.1.1",
+    "morgan": "^1.10.0",
     "save": "^2.4.0",
     "secp256k1": "^4.0.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/crypto-js": "^4.0.1",
     "@types/express": "^4.17.11",
+    "@types/morgan": "^1.9.2",
     "@types/node": "^15.0.0",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
