--- a/front-end/package.json
+++ b/front-end/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
+    "file-saver": "^2.0.5",
+    "json2typescript": "^1.4.1",
     "ng-snotify": "^9.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -30,6 +32,7 @@
     "@angular-devkit/build-angular": "~0.1102.1",
     "@angular/cli": "~11.2.1",
     "@angular/compiler-cli": "~11.2.1",
+    "@types/file-saver": "^2.0.2",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
