--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,33 +1,40 @@
 {
-  "name": "back-end",
+  "name": "blockkk",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.ts"
+    "start": "nodemon index.js 4566 http://localhost:4566",
+    "node1": "nodemon index.js 4567 http://localhost:4567 4566",
+    "node2": "nodemon index.js 4568 http://localhost:4568 4567"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "angular-chart.js": "^1.1.1",
+    "body-parser": "^1.18.3",
+    "browserify": "^16.2.3",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
-    "crypto-js": "^4.0.0",
-    "express": "4.17.1",
-    "express-async-errors": "^3.1.1",
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
+    "jade": "^1.11.0",
+    "mathjs": "^5.2.2",
+    "mongodb": "^3.1.8",
     "morgan": "^1.10.0",
-    "save": "^2.4.0",
-    "secp256k1": "^4.0.2"
+    "node-forge": "^0.7.6",
+    "nodemailer": "^4.6.8",
+    "nodemon": "^1.18.4",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.2",
+    "sha256": "^0.2.0",
+    "socket.io": "^1.4.8",
+    "socket.io-client": "^2.4.0",
+    "uniqid": "^5.0.3",
+    "uuid": "^3.3.2",
+    "validator": "^10.8.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.10",
-    "@types/crypto-js": "^4.0.1",
-    "@types/express": "^4.17.11",
-    "@types/morgan": "^1.9.2",
-    "@types/node": "^15.0.0",
-    "nodemon": "^2.0.7",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.4"
+    "nodemon": "^2.0.7"
   }
 }
